welcome.lessons.welcome.variables.Variables.scala.error
Variables:3: error: nbPas is already defined as variable nbPas
var nbPas: Int= nbPas+1
    ^